testing/tests/ui/garbled-closing-blocks.stderr
error: unclosed block, you likely meant to apply whitespace control: "-%}"
 --> <source attribute>:1:11
       "%-}{% endif %}"
 --> tests/ui/garbled-closing-blocks.rs:4:34
  |
4 | #[template(ext = "txt", source = "{% if cond %-}{% endif %}")]
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed block, you likely meant to apply whitespace control: "+%}"
 --> <source attribute>:1:11
       "%+}{% endif %}"
  --> tests/ui/garbled-closing-blocks.rs:10:34
   |
10 | #[template(ext = "txt", source = "{% if cond %+}{% endif %}")]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed block, you likely meant to apply whitespace control: "~%}"
 --> <source attribute>:1:11
       "%~}{% endif %}"
  --> tests/ui/garbled-closing-blocks.rs:16:34
   |
16 | #[template(ext = "txt", source = "{% if cond %~}{% endif %}")]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed block, you likely meant to apply whitespace control: "-%}"
 --> <source attribute>:1:22
       "%-}"
  --> tests/ui/garbled-closing-blocks.rs:22:34
   |
22 | #[template(ext = "txt", source = "{% if cond %}{% endif %-}")]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed block, you likely meant to apply whitespace control: "+%}"
 --> <source attribute>:1:22
       "%+}"
  --> tests/ui/garbled-closing-blocks.rs:28:34
   |
28 | #[template(ext = "txt", source = "{% if cond %}{% endif %+}")]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed block, you likely meant to apply whitespace control: "~%}"
 --> <source attribute>:1:22
       "%~}"
  --> tests/ui/garbled-closing-blocks.rs:34:34
   |
34 | #[template(ext = "txt", source = "{% if cond %}{% endif %~}")]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
